automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3></h3><!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
-        <!-- Level 1 'HAPPY' Header -->
+        <h1></h1><!-- Level 1 'HAPPY' Header -->
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3></h3><!-- Level 3 'WRITTEN BY...' Header -->
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+        <p></p><!-- pararaph text 'PUBLISHED BY...' -->
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span></span><!-- span text 'PHARRELLWILLIAMS.COM' -->
 
         <img src ="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo" />
 
